2004-10-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-mem.[c,h]: New. First attempt to offer out-sourcing
	  of memory management.

2004-10-01  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: exif_entry_fix:
	  exif_set_short: 2nd & 3rd args swapped

2004-09-18  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Enhance.

2004-09-17  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): New. Fixes any violations
	  against the standard.

2004-09-17  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Kill some warnings. Read as much from the
	  UserComment tag as possible (as suggested by Angela Wrobel).

2004-09-15  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-loader.c: int -> unsigned int.
	* libexif/olympus/mnote-olympus-entry.c: typecast.
	  Both changes made to avoid compiler warnings.

2004-09-12  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by marcusmeissner@users.sourceforge.net: Some format string
	fixes, wrong argument list fixed, format string problems avoided.

2004-09-09  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: Remove "([external])" after AM_GNU_GETTEXT as it
	  doesn't work for David MacMahon <davidm@astro.berkeley.edu>.
	* libexif/exif-log.[c,h]: Provide some standard messages and titles.
	* configure.in: Increment version as interfaces have been added.

2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Change comment to point to specification.

2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Redirect error messages to the logging 
	  mechanism.
	* libexif/exif-log.h: EXIF_LOG_CODE_CORRUPT_DATA: New.

2004-09-08  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c
	* libexif/exif-data.c: Replace a couple of calls to malloc by 
	  calls to calloc.

2004-09-07  Lutz Mueller <lutz@users.sourceforge.net>
