@@ -35,6 +35,7 @@
 static void
 exif_mnote_data_canon_clear (ExifMnoteDataCanon *n)
 {
+	ExifMnoteData *d = (ExifMnoteData *) n;
 	unsigned int i;
 
 	if (!n) return;
@@ -42,10 +43,10 @@ exif_mnote_data_canon_clear (ExifMnoteDataCanon *n)
 	if (n->entries) {
 		for (i = 0; i < n->count; i++)
 			if (n->entries[i].data) {
-				free (n->entries[i].data);
+				exif_mem_free (d->mem, n->entries[i].data);
 				n->entries[i].data = NULL;
 			}
-		free (n->entries);
+		exif_mem_free (d->mem, n->entries);
 		n->entries = NULL;
 		n->count = 0;
 	}
@@ -159,9 +160,8 @@ exif_mnote_data_canon_save (ExifMnoteData *ne,
 	 * of entries.
 	 */
 	*buf_size = 2 + n->count * 12 + 4;
-	*buf = malloc (sizeof (char) * *buf_size);
+	*buf = exif_mem_alloc (ne->mem, sizeof (char) * *buf_size);
 	if (!*buf) return;
-	memset (*buf, 0, sizeof (char) * *buf_size);
 
 	/* Save the number of entries */
 	exif_set_short (*buf, n->order, (ExifShort) n->count);
@@ -230,9 +230,8 @@ exif_mnote_data_canon_load (ExifMnoteData *ne,
 	    if (o + s > buf_size) return;
 	    
 	    /* Sanity check */
-	    n->entries[i].data = malloc (sizeof (char) * s);
+	    n->entries[i].data = exif_mem_alloc (ne->mem, sizeof (char) * s);
 	    if (!n->entries[i].data) return;
-	    memset (n->entries[i].data, 0, sizeof (char) * s);
 	    n->entries[i].size = s;
 	    memcpy (n->entries[i].data, buf + o, s);
 	}
@@ -284,14 +283,16 @@ exif_mnote_data_canon_get_description (ExifMnoteData *note, unsigned int i)
 }
 
 ExifMnoteData *
-exif_mnote_data_canon_new (void)
+exif_mnote_data_canon_new (ExifMem *mem)
 {
 	ExifMnoteData *d;
 
-	d = calloc (1, sizeof (ExifMnoteDataCanon));
+	if (!mem) return NULL;
+
+	d = exif_mem_alloc (mem, sizeof (ExifMnoteDataCanon));
 	if (!d) return NULL;
 
-	exif_mnote_data_construct (d);
+	exif_mnote_data_construct (d, mem);
 
 	/* Set up function pointers */
 	d->methods.free            = exif_mnote_data_canon_free;
